<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rcl_lifecycle</name>
  <version>0.0.0</version>
  <description>Package containing a C-based lifecycle implementation</description>
  <maintainer email="karsten@osrfoundation.org">Karsten Knese</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rcl</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
