<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rcl_lifecycle</name>
  <version>3.1.2</version>
  <description>Package containing a C-based lifecycle implementation</description>
  <maintainer email="ivanpauno@ekumenlabs.com">Ivan Paunovic</maintainer>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <maintainer email="william@openrobotics.org">William Woodall</maintainer>
  <license>Apache License 2.0</license>
  <author email="karsten@openrobotics.org">Karsten Knese</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>rosidl_runtime_c</build_depend>
  <build_depend>tracetools</build_depend>

  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rcl</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>rmw</exec_depend>
  <exec_depend>rosidl_runtime_c</exec_depend>
  <exec_depend>tracetools</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>osrf_testing_tools_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
