<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rcl_yaml_param_parser</name>
  <version>1.1.7</version>
  <description>Parse a YAML parameter file and populate the C data structure.</description>
  <maintainer email="anup.pemmaiah@apex.ai">Anup Pemmaiah</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>libyaml_vendor</depend>
  <depend>yaml</depend>
  <build_depend>rcutils</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>osrf_testing_tools_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
