<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rcutils_yaml_param_parser</name>
  <version>0.1.0</version>
  <description>Package containing various utility types and functions for C</description>
  <maintainer email="anup.pemmaiah@apex.ai">Anup Pemmaiah</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>python3-empy</buildtool_depend>

  <build_depend>yaml</build_depend>
  <build_depend>rcutils</build_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
